# SimpleSandbox

./: .gitignore  CMakeLists.txt  README.md  test.c
src/: CMakeLists.txt
src/common/: error.c  error.h  user_authority.c  user_authority.h
src/core/: CMakeLists.txt
src/core/compile/: compile.c  compile.h  compile_config.h
src/core/execute/: execute.c  execute.h
src/core/logger/: logger.c  logger.h
tests/: a+b.cpp  platinum.cpp
tests/input/: 1.in  10.in
